fix overlap css sideabar

--- a/doc/_static/css/custom.css
+++ b/doc/_static/css/custom.css
@@ -254,7 +254,7 @@ html body div.wy-table-responsive .footnote td {
      height: 100%;
      width: 250px;
      top: 0px;
-     left: 1100px;
+     left: 1250px;
      padding-right: 10px;
      background: linear-gradient(90deg, #fcfcfc, rgba(0, 0, 0, 0));
      padding-top: 70px;
